Apps menu on index page. State maintained in independent iframes, until you leave the index page (e.g. configuration page)